@@ -82,6 +82,24 @@
   <email>lang@b1-systems.de</email>
   <active>yes</active>
  </contributor>
+ <contributor>
+  <name>Ralf Lang</name>
+  <user>rlang</user>
+  <email>lang@b1-systems.de</email>
+  <active>yes</active>
+ </contributor>
+ <contributor>
+  <name>Ralf Lang</name>
+  <user>rlang</user>
+  <email>lang@b1-systems.de</email>
+  <active>yes</active>
+ </contributor>
+ <contributor>
+  <name>Ralf Lang</name>
+  <user>rlang</user>
+  <email>lang@b1-systems.de</email>
+  <active>yes</active>
+ </contributor>
  <lead>
   <name>Jan Schneider</name>
   <user>jan</user>
@@ -100,7 +118,7 @@
   <email>lang@b1-systems.de</email>
   <active>yes</active>
  </contributor>
- <date>2021-07-19</date>
+ <date>2022-04-19</date>
  <version>
   <release>1.0.0alpha4</release>
   <api>1.0.0alpha1</api>
@@ -109,9 +127,11 @@
   <release>alpha</release>
   <api>alpha</api>
  </stability>
- <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+ <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1-only</license>
  <notes>
-* 
+* [rla] .horde.yml now supports composer&apos;s &apos;provide&apos; statement.
+* [rla] Add autoload-dev support to composer generator
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -119,6 +139,7 @@
     <dir name="workflows">
      <file name="ci.yml" role="php" />
      <file name="phpdoc.yml" role="php" />
+     <file name="release.yml" role="php" />
      <file name="update-satis.yml" role="php" />
     </dir> <!-- /.github/workflows -->
    </dir> <!-- /.github -->
@@ -3503,9 +3524,9 @@
  <dependencies>
   <required>
    <php>
-    <min>7.0.0</min>
-    <max>8.0.0alpha1</max>
-    <exclude>8.0.0alpha1</exclude>
+    <min>7.4.0</min>
+    <max>9.0.0alpha1</max>
+    <exclude>9.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -3516,6 +3537,7 @@
   <filelist>
    <install as="workflows/ci.yml" name=".github/workflows/ci.yml" />
    <install as="workflows/phpdoc.yml" name=".github/workflows/phpdoc.yml" />
+   <install as="workflows/release.yml" name=".github/workflows/release.yml" />
    <install as="workflows/update-satis.yml" name=".github/workflows/update-satis.yml" />
    <install as="horde-bootstrap" name="bin/horde-bootstrap" />
    <install as="horde-components" name="bin/horde-components" />
@@ -5871,10 +5893,6 @@
   </filelist>
  </phprelease>
  <changelog>
- 
- 
- 
- 
   <release>
    <version>
     <release>0.0.1</release>
@@ -5980,9 +5998,11 @@
     <api>alpha</api>
    </stability>
    <date>2021-07-19</date>
-   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1-only</license>
    <notes>
-* 
+* [rla] .horde.yml now supports composer&apos;s &apos;provide&apos; statement.
+* [rla] Add autoload-dev support to composer generator
+* |+
    </notes>
   </release>
  </changelog>
