@@ -2,7 +2,9 @@
 v1.0.0alpha4
 ------------
 
-
+[rla] .horde.yml now supports composer's 'provide' statement.
+[rla] Add autoload-dev support to composer generator
+|+
 
 
 ------------
